# Valence-Framework

./: README
DataBus/: CAN-pres.ppt
mcfly/: Doxyfile  Makefile.in  config.sample  configure  configure.ac  make.inc
mcfly/bindings/: Makefile.in
mcfly/bindings/cpp/: Makefile.in
mcfly/bindings/cpp/include/: mcfly_cpp.hh
mcfly/bindings/cpp/srclib/: Makefile.in  mcfly_cpp.cc
mcfly/bindings/cpp/tests/: Makefile.in  main.cc  test_config.cfg
mcfly/include/mcfly/: command.h  config.h  error.h  mcfly.h  module.h  type.h  util.h
mcfly/include/mcfly/modules/: mod_commands.h  mod_types.h
mcfly/modules/: Makefile.in  makemodule.inc
mcfly/modules/dummy_module/: Makefile  Makefile.in  dummy_module.c
mcfly/modules/elm327_module/: Makefile  Makefile.in  elm327.c  elm327.h  elm327_module.c
mcfly/modules/elm_module/: Makefile.in  elm327.h  elm_module.c
mcfly/srclib/: Makefile.in  config.c  mcfly.c  module.c  util.c
mcfly/tests/: Makefile.in  main.c  test_config.cfg
mcfly/tools/: Makefile.in
mcfly/tools/simulator/: Makefile.in  main.c  plugin.h
mcfly/tools/simulator/plugins/: Makefile.in  makeplugin.inc  simple_plugin.c
swig/python/: .gitignore  build.sh  example.c  example.py  example_wrap.c
test_tools/mcfly_test_obd/: Makefile  README  mcfly_test_obd.c
test_tools/mcfly_test_speed/: Makefile  README  mcfly.config  mcfly_test_speed.c
test_tools/obdtest/: .obd.h.swp  Makefile  main.c  obd.c  obd.h  setup.sh
